--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Space Jockey</h1>
-    <p class="lead">We are DeSciNerds.</p>
+    <p class="lead">We are DeSciNerds. We will win Nasa Space App Hackathon.</p>
     <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
 
